--- a/_posts/2002-01-01-Project_1.md
+++ b/_posts/2002-01-01-Project_1.md
@@ -3,7 +3,7 @@ title: 삼성 테크윈 1공장
 description: Examples of text, typography, math equations, diagrams, flowcharts, pictures, videos, and more.
 author: cotes
 date: 2002-01-01 11:33:00 +0800
-categories: [Blogging]
+categories: [Blogging,project]
 tags: [Project]
 pin: true
 math: true
