--- a/_posts/2003-01-01-Project_2.md
+++ b/_posts/2003-01-01-Project_2.md
@@ -3,7 +3,7 @@ title: 대한 솔루션
 description: Examples of text, typography, math equations, diagrams, flowcharts, pictures, videos, and more.
 author: cotes
 date: 2003-01-01 11:33:00 +0800
-categories: [Blogging]
+categories: [Blogging,project]
 tags: [Project]
 pin: true
 math: true
