--- a/_posts/2003-01-01-Project_대한솔루션.md
+++ b/_posts/2003-01-01-Project_대한솔루션.md
@@ -27,9 +27,10 @@ image:
 You can use [MathJax](https://www.mathjax.org/) to write LaTeX expressions. For example:
 When \\(a \ne 0\\), there are two solutions to \\(ax^2 + bx + c = 0\\) and they are $$x = {-b \pm \sqrt{b^2-4ac} \over 2a}.$$
 
-How about a yummy crepe?
+## 회사 홈페이지 및 이미지
+[대한 솔루션](http://dhsol.com)
 
-![Crepe](https://beautifuljekyll.com/assets/img/crepe.jpg)
+![IMG](https://sjpark2free.github.io/asserts/img/post/DHS.png)
 
 
 
