--- a/_posts/2003-01-01-Project_대한솔루션.md
+++ b/_posts/2003-01-01-Project_대한솔루션.md
@@ -30,7 +30,7 @@ When \\(a \ne 0\\), there are two solutions to \\(ax^2 + bx + c = 0\\) and they 
 ## 회사 홈페이지 및 이미지
 [대한 솔루션](http://dhsol.com)
 
-![IMG](https://sjpark2free.github.io/asserts/img/post/DHS.png)
+![IMG](https://sjpark2free.github.io/assets/img/post/DHS.png)
 
 
 
