--- a/_posts/2003-01-01-Project_대한솔루션.md
+++ b/_posts/2003-01-01-Project_대한솔루션.md
@@ -1,7 +1,7 @@
 ---
 title: 대한 솔루션
 description: Examples of text, typography, math equations, diagrams, flowcharts, pictures, videos, and more.
-author: cotes
+author: seokju.park
 date: 2003-01-01 00:00:00 +0800
 categories: [Blogging,project]
 tags: [Project]
@@ -14,27 +14,12 @@ image:
   alt: Responsive rendering of Chirpy theme on multiple devices.
 ---
 
-
-## 주 업무
--  PLM 구축 , BOM/Documents,설계 변경 관리 업무 진행
-
-## Here is a secondary heading
-
-[This is a link to a different site](https://deanattali.com/) and [this is a link to a section inside this page](#local-urls).
-
-
-
-You can use [MathJax](https://www.mathjax.org/) to write LaTeX expressions. For example:
-When \\(a \ne 0\\), there are two solutions to \\(ax^2 + bx + c = 0\\) and they are $$x = {-b \pm \sqrt{b^2-4ac} \over 2a}.$$
-
 ## 회사 홈페이지 및 이미지
 [대한 솔루션](http://dhsol.com)
 
 ![IMG](https://sjpark2free.github.io/assets/img/post/DHS.png)
 
+## 주 업무
+-  PLM 구축 , BOM/Documents,설계 변경 관리 업무 진행
 
-
-
-If the above image is broken, then you'll need to follow the instructions [in the FAQ](https://beautifuljekyll.com/faq/#links-in-project-page). Here is proof that it can be fixed:
-
-
+## 프로젝트 진행 내용
