--- a/_posts/2012-01-01-Project_만도.md
+++ b/_posts/2012-01-01-Project_만도.md
@@ -14,12 +14,12 @@ image:
   alt: Responsive rendering of Chirpy theme on multiple devices.
 ---
 
-## 회사 홈페이지 및 이미지
-[대한 솔루션](http://dhsol.com)
-
-![IMG](https://sjpark2free.github.io/assets/img/post/DHS.png)
-
 ## 주 업무
 -  PLM 구축(ENOVIA) , SAP ERP, CAA ,BOM/Documents,설계 변경 관리 업무, 모바일 업무 지원
+
+## 회사 홈페이지 및 이미지
+[만도](https://hlmando.com/ko/main.do)
+
+![IMG](https://sjpark2free.github.io/assets/img/post/mando.png)
 
 ## 프로젝트 진행 내용
