--- a/_posts/2004-01-01-Project_삼성.md
+++ b/_posts/2004-01-01-Project_삼성.md
@@ -16,7 +16,8 @@ image:
 
 
 ## 주 업무
--  SOC  사업부 :  : PLM 구축 . PL 업무 수행 , BOM/Documents,설계 변경 관리 업무 진행
+-  SOC  사업부
+-  PLM 구축 . PL 업무 수행 , BOM/Documents,설계 변경 관리 업무 진행
 
 ## Here is a secondary heading
 
