--- a/_posts/2012-01-01-Project_만도.md
+++ b/_posts/2012-01-01-Project_만도.md
@@ -3,7 +3,7 @@ title: 만도
 description: Examples of text, typography, math equations, diagrams, flowcharts, pictures, videos, and more.
 author: seokju.park
 date: 2012-01-01 00:00:00 +0800
-categories: [project]
+categories: [Blogging,project]
 tags: [Project]
 pin: true
 math: true
