--- a/_posts/2004-01-01-Project_삼성.md
+++ b/_posts/2004-01-01-Project_삼성.md
@@ -19,22 +19,9 @@ image:
 -  SOC  사업부
 -  PLM 구축 . PL 업무 수행 , BOM/Documents,설계 변경 관리 업무 진행
 
-## Here is a secondary heading
+## 회사 홈페이지 및 이미지
+[TKE 코리아](https://www.samsungsds.com/kr/security-operation-center-consulting/security-operation-center-consulting.html)
 
-[This is a link to a different site](https://deanattali.com/) and [this is a link to a section inside this page](#local-urls).
+![IMG](https://sjpark2free.github.io/assets/img/post/SM_SOC.png)
 
-
-
-You can use [MathJax](https://www.mathjax.org/) to write LaTeX expressions. For example:
-When \\(a \ne 0\\), there are two solutions to \\(ax^2 + bx + c = 0\\) and they are $$x = {-b \pm \sqrt{b^2-4ac} \over 2a}.$$
-
-How about a yummy crepe?
-
-![Crepe](https://beautifuljekyll.com/assets/img/crepe.jpg)
-
-
-
-
-If the above image is broken, then you'll need to follow the instructions [in the FAQ](https://beautifuljekyll.com/faq/#links-in-project-page). Here is proof that it can be fixed:
-
-
+## 프로젝트 진행 내용
