--- a/_posts/2011-01-01-Project_세메스.md
+++ b/_posts/2011-01-01-Project_세메스.md
@@ -16,24 +16,13 @@ image:
 
 
 ## 주 업무
--  반도체 장비 관리 솔루션(: PLM 구축 , Auto Create BOM,설계 변경 관리 업무 진행)
-
-## Here is a secondary heading
-
-[This is a link to a different site](https://deanattali.com/) and [this is a link to a section inside this page](#local-urls).
+-  반도체 장비 관리 솔루션
+-  PLM 구축 , Auto Create BOM,설계 변경 관리 업무 진행
 
 
+## 회사 홈페이지 및 이미지
+[만도](https://www.semes.com)
 
-You can use [MathJax](https://www.mathjax.org/) to write LaTeX expressions. For example:
-When \\(a \ne 0\\), there are two solutions to \\(ax^2 + bx + c = 0\\) and they are $$x = {-b \pm \sqrt{b^2-4ac} \over 2a}.$$
+![IMG](https://sjpark2free.github.io/assets/img/post/SEMES.png)
 
-How about a yummy crepe?
-
-![Crepe](https://beautifuljekyll.com/assets/img/crepe.jpg)
-
-
-
-
-If the above image is broken, then you'll need to follow the instructions [in the FAQ](https://beautifuljekyll.com/faq/#links-in-project-page). Here is proof that it can be fixed:
-
-
+## 프로젝트 진행 내용
