--- a/_posts/2004-01-01-Project_삼성.md
+++ b/_posts/2004-01-01-Project_삼성.md
@@ -20,8 +20,8 @@ image:
 -  PLM 구축 . PL 업무 수행 , BOM/Documents,설계 변경 관리 업무 진행
 
 ## 회사 홈페이지 및 이미지
-[TKE 코리아](https://www.samsungsds.com/kr/security-operation-center-consulting/security-operation-center-consulting.html)
+[삼성SDS SCO](https://www.samsungsds.com/kr/security-operation-center-consulting/security-operation-center-consulting.html)
 
-![IMG](https://sjpark2free.github.io/assets/img/post/SM_SOC.png)
+![IMG](https://sjpark2free.github.io/assets/img/post/SM_SOC.jpeg
 
 ## 프로젝트 진행 내용
