--- a/_posts/2011-01-01-Project_세메스.md
+++ b/_posts/2011-01-01-Project_세메스.md
@@ -21,7 +21,7 @@ image:
 
 
 ## 회사 홈페이지 및 이미지
-[만도](https://www.semes.com)
+[세메스](https://www.semes.com)
 
 ![IMG](https://sjpark2free.github.io/assets/img/post/SEMES.png)
 
